--- a/example.html
+++ b/example.html
@@ -3,6 +3,7 @@
 <head>
 	
     <title>slectr example</title>
+	<meta charset="UTF-8"/>
 	
 	<link rel="stylesheet" href="example.css"/>
 	
@@ -13,7 +14,12 @@
 	
 	$(function() {
 		
-		enableSelectBoxes();
+		console.log(location.search.substr(1).split('&').join('\n').split('=').join(' = '));
+		
+		
+		$('.styleable').selectr();
+		
+		//enableSelectBoxes();
 		
 	});
 	
@@ -28,17 +34,25 @@
 
 
     
-<form>
+<form method="get">
 	
-	<select name="field1">
+	<select class='styleable' id="real-select" name="field1">
 		<option value="1">One</option>
-		<option value="2">Two</option>
+		<option value="2" selected>Two</option>
 		<option value="3">Three</option>
+	</select>
+	
+	
+	<select class='styleable' id="real-select-2" name="field2">
+		<option value="jedan">Jedan</option>
+		<option value="dva" selected>Dva</option>
+		<option value="tri">Tri</option>
+		<option value="cetri">Četri</option>
 	</select>
 	
 	<br /><br />
 	
-	<div class='selectr'>
+	<!--div class='selectr' id='fake-select'>
 		<input type="hidden" value="3" name="sector" class="selectr_value"/>
 		<span class='selectr-display'>AAA</span>
 		<span class='selectr-btn'>&#9660;</span>
@@ -52,8 +66,10 @@
 			<li class="selectr-option" data-value="security">Security</li>
 			<li class="selectr-option" data-value="other">Other</li>
 		</ul>
-	</div>
+	</div-->
 
+	<br /><br />
+	<input type="submit"/>
 	
 </form>
 
